--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Script to populate keycloak with initial data.",
   "main": "app.js",
   "scripts": {
-    "test": "yarn run eslint && NODE_ENV= yarn run mocha",
+    "test": "yarn run eslint && NODE_ENV= yarn run mocha --reporter mocha-teamcity-reporter test",
     "eslint": "eslint app.js services/. test/. --config .eslintrc.json",
     "dev": "nodemon src/",
     "start": "node app.js",
@@ -28,7 +28,8 @@
     ]
   },
   "dependencies": {
-    "keycloak-admin": "^1.8.0"
+    "keycloak-admin": "^1.8.0",
+    "mocha-teamcity-reporter": "^2.5.1"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
