--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "yarn run eslint && NODE_ENV= yarn run mocha --reporter mocha-teamcity-reporter test",
-    "eslint": "eslint app.js services/. test/. --config .eslintrc.json",
+    "eslint": "./node_modules/eslint/bin/eslint.js app.js services/. test/. --config .eslintrc.json",
     "dev": "nodemon src/",
     "start": "node app.js",
     "prettify": "find *.js -type f | xargs prettier --write",
